[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://tests/test_runner.gd" id="1_2g3ln"]

[node name="TestRunner" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2g3ln")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Header"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = -15.5
offset_right = 165.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "End of Line Test Runner"
horizontal_alignment = 1

[node name="Controls" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RunButton" type="Button" parent="VBoxContainer/Controls"]
layout_mode = 2
size_flags_horizontal = 3
text = "Run All Tests"

[node name="ResetButton" type="Button" parent="VBoxContainer/Controls"]
layout_mode = 2
size_flags_horizontal = 3
text = "Reset"

[node name="ProgressDisplay" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer/ProgressDisplay"]
layout_mode = 2
max_value = 1.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/ProgressDisplay"]
layout_mode = 2
size_flags_vertical = 3

[node name="LogDisplay" type="RichTextLabel" parent="VBoxContainer/ProgressDisplay/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "Press \"Run All Tests\" to begin testing..."

[connection signal="pressed" from="VBoxContainer/Controls/RunButton" to="." method="run_all_tests"]
[connection signal="pressed" from="VBoxContainer/Controls/ResetButton" to="." method="reset"]
[connection signal="test_progress" from="." to="." method="_on_test_progress"]
[connection signal="tests_completed" from="." to="." method="_on_tests_completed"]
